; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/svnadmin/extr_svnadmin.c_subcommand_crashtest.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/svnadmin/extr_svnadmin.c_subcommand_crashtest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.svnadmin_opt_state = type { i32 }

@crashtest_malfunction_handler = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [92 x i8] c"Successfully opened repository '%s'.\0AWill now crash to simulate a crashing server process.\0A\00", align 1
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32*)* @subcommand_crashtest to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @subcommand_crashtest(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.svnadmin_opt_state*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast i8* %9 to %struct.svnadmin_opt_state*
  store %struct.svnadmin_opt_state* %10, %struct.svnadmin_opt_state** %7, align 8
  %11 = load i32, i32* @crashtest_malfunction_handler, align 4
  %12 = call i32 @svn_error_set_malfunction_handler(i32 %11)
  %13 = load %struct.svnadmin_opt_state*, %struct.svnadmin_opt_state** %7, align 8
  %14 = getelementptr inbounds %struct.svnadmin_opt_state, %struct.svnadmin_opt_state* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.svnadmin_opt_state*, %struct.svnadmin_opt_state** %7, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @open_repos(i32** %8, i32 %15, %struct.svnadmin_opt_state* %16, i32* %17)
  %19 = call i32 @SVN_ERR(i32 %18)
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @_(i8* getelementptr inbounds ([92 x i8], [92 x i8]* @.str, i64 0, i64 0))
  %22 = load %struct.svnadmin_opt_state*, %struct.svnadmin_opt_state** %7, align 8
  %23 = getelementptr inbounds %struct.svnadmin_opt_state, %struct.svnadmin_opt_state* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32*, i32** %6, align 8
  %26 = call i32 @svn_dirent_local_style(i32 %24, i32* %25)
  %27 = call i32 @svn_cmdline_printf(i32* %20, i32 %21, i32 %26)
  %28 = call i32 @SVN_ERR(i32 %27)
  %29 = call i32 (...) @SVN_ERR_MALFUNCTION()
  %30 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %30
}

declare dso_local i32 @svn_error_set_malfunction_handler(i32) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @open_repos(i32**, i32, %struct.svnadmin_opt_state*, i32*) #1

declare dso_local i32 @svn_cmdline_printf(i32*, i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @svn_dirent_local_style(i32, i32*) #1

declare dso_local i32 @SVN_ERR_MALFUNCTION(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
